# ai-docs-indexer

./: README.md  pyproject.toml
src/ai_docs_indexer/: __init__.py  cli.py  scanner.py
src/ai_docs_indexer/formatters/: __init__.py  base.py  json.py  pipe.py  yaml.py
tests/: __init__.py  test_cli.py  test_formatters.py  test_scanner.py
