[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-docs-indexer"
version = "0.1.0"
description = "Generate compressed documentation indexes for AI agent context files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Stephen Feather" }
]
keywords = ["ai", "documentation", "indexer", "agents", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ai-docs-indexer = "ai_docs_indexer.cli:main"

[project.urls]
Homepage = "https://github.com/stephenfeather/ai-docs-indexer"
Repository = "https://github.com/stephenfeather/ai-docs-indexer"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_docs_indexer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
